# dailyFX

./: .env.example  .gitignore  AGENTS.md  AUDIT  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  dailyfx-agent  dailyfx_agent.py  docker-compose.yml
backend/: Dockerfile  alembic.ini  healthcheck.py  pyproject.toml  run_opencv_tests.py  start.sh
backend/app/: cli.py  config.py  database.py  main.py  preflight.py  security.py  version.py
backend/app/api/: generation_upload_helpers.py  routes_ai_effects.py  routes_audit.py  routes_debug.py  routes_health.py  (+11 more)
backend/scripts/: rotate_secret_key.py  run_rotation.py
backend/tests/: _asgi_test_client.py  _contract_helpers.py  conftest.py  test_agent_queue.py  test_ai_budget.py  test_ai_effects.py  test_ai_vision.py  test_all_modules.py  test_apple_weather.py  test_asset_selection_pipeline.py  test_asset_usage_backfill.py  test_audit_service.py  test_cli.py  test_config_validation.py  test_dailyfx_agent.py  test_database.py  test_database_indexes.py  test_debug_routes.py  test_effect_statistics.py  test_engine.py  test_exif_embedder.py  test_file_deletion.py  test_generation_modules.py  test_generation_queue_model.py  test_generation_routes.py  test_generation_schemas.py  test_health.py  test_host_manifest.py  test_immich_client.py  test_immich_routes.py  test_immich_thumbnail_cache.py  test_instaweather.py  test_metrics_and_logging.py  test_motion_cinemagraph.py  test_motion_common.py  test_motion_parallax.py  test_motion_pipeline.py  test_motion_pulse.py  test_motion_zoom_pan.py  test_new_modules.py  (+32 more)
(+503 files in other folders)
